_sass/main.scss
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap');

body {
  font-family: 'IBM Plex Mono', monospace;
  color: #000;
  margin: 0;
  padding: 0;
  background: #F0F0F0;
  height: 100vh;
	&.wrong {
		background: #FF000E;
	}
	&.correct {
		background: #00FF19;
	}
}

button {
  background: none;
  border: none;
  font-size: 24px;
  letter-spacing: 2px;
  font-family: 'IBM Plex Mono', monospace;
  padding: 0;
  margin: 0;
  font-weight: 400;
  color: blue;
  text-transform: uppercase;
  cursor: pointer;
  &:hover {
    color: pink;
    transition: all .3s;
  }
}
h1, h2, .menu-link, .counter {
  margin: 0;
  padding: 0;
  letter-spacing: 2px;
  font-weight: 400;
  color: #000;
  text-decoration: none;
}
h1 {
  font-size: 5vw;
  font-family: 'IBM Plex Sans', sans-serif;
  width: 50%;
  line-height: 110%;
}
h2, .counter, .menu-link {
  font-size: 24px;
  text-transform: uppercase;
}
.main-logo {
  margin-top: 2px;
}
.main-menu {
  display: -webkit-flex;
  display: -ms-flex;
  display: flex;
  justify-content: space-between;
	padding: 18px 30px 0;
}
.menu-link {
  &:hover {
    color: pink;
    transition: all .3s;
  }
}
.counter {
  position: relative;
  &:before {
    content: url(../img/tr.svg);
    position: absolute;
    top: -4px;
    left: -15px;
  }
}
#game {
	//height: calc(100vh - 20px);
  margin: 0px;
	position: fixed;
	left: 30px;
	right: 30px;
	bottom: 0px;
	top: 59px;

	//overflow: hidden;
	.visible {
		display: block !important;
	}
  .question {
    display: none;
    img.option {
      max-width: 100%;
			max-height: 100%;
      //filter: invert(100%);
      //width: 256px;
    }
    .answer{
      display: none;
			.explanation{
				display: none;
        position: absolute;
				padding: 30px;
				background: rgba(0, 0, 0, 0.7);
        top: 0;
				color: white;
				&.left {
          right: 50%;
          left: 0px;
          top: 0px;
				}
				&.right {
          left: 50%;
          right: 0px;
          top: 0px;
				}
				&.correct {
					//color: green;
					//&:before {
						//background: green;
					//}
				}
				&.wrong {
					//color: red;
					//&:before {
						//background: red;
					//}
				}
				//&:before {
					//content: ' ';
					//position: fixed;
					//top: 0;
					//bottom: 0;
					//left: 0;
					//right: 0;
					//z-index: -1;
				//}
			}
    }
  }
	#result, #intro{
		display: none;
	}
  .optionSet {
    background: #000;
    //height: 90vh;
    display: flex;
    align-items: center;
    justify-content: center;
		position: fixed;
		left: 30px;
		right: 30px;
		bottom: 50px;
		//top: 40px;
		top: 59px;
    a {
      &:hover {
        position: relative;
				&:after {
					content: ' ';
					position: absolute;
					left: 0;
					bottom: 0;
					top: 0;
					right: 0;
					background: white;
					opacity: 0.1;
				}
      }
    }
  }
	.progress {
		div {
			display: inline-block;
      display: none;
			width: 20px;
			height: 20px;
			border-radius: 999px;
		}
		.correct {
			background: green;
		}
		.wrong {
			background: red;
		}
		.empty {
			background: silver;
		}
	}
  button.next{
    text-transform: uppercase;
    position: absolute;
    right: 0px;
    bottom: 10px;
		body.answer-is-shown & {
			color: black !important;
		}
  }
  .title {
    position: absolute;
    left: 0px;
    bottom: 10px;
  }
  .start {
    position: absolute;
    left: 30px;
    bottom: 10px;
    font-size: 70px;
  }
  .card-link {
    //height: 90vh;
    height: 100%;
    width: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
		background-position: 50% 50%;
		background-size: contain;
		background-repeat: no-repeat;
		background-color: #000;
		position: relative;
		&:before {
			content: '';
			background-size: contain;
			background-repeat: no-repeat;
			background-position: 50% 50%;
			position: absolute;
			top: 0;
			bottom: 0;
			left: 0;
			right: 0;
			z-index: 2;
		}
		body.answer-is-shown & {
			&.option-correct:before {
				background-image: url(../img/correct.png);
			}
			&.option-wrong:before {
				background-image: url(../img/wrong.png);
			}
		}
  }
}

@media screen and (max-width: 785px) {
	#game {
		.question {
			//display: none;
			img.option {
				//max-width: 100%;
				//filter: invert(100%);
				//width: 256px;
			}
			.answer{
				//display: none;
				.explanation{
					//display: none;
					//position: inherit;
					//margin-top: 20px;
					&.correct {
						//color: green;
					}
					&.wrong {
						//color: red;
					}
				}
			}
		}
		.optionSet {
			//height: auto;
			//display: block;
			align-items: unset;
			justify-content: unset;
		}
		.card-link {
			height: auto;
			width: 100%;
			display: block;
			align-items: unset;
			justify-content: unset;
			text-align: center;
		}
		.question img.option {
			max-width: 60%;
		}
		button.next {
			width: 100%;
			background: $background;
			z-index: 1;
			left: 0;
			text-align: left;
		}
	}
}

